Corretto l'utilizzo del feedback con relativi js e css.
Modificato il decoder per l'utilizzo di java>=8.